creato struttura base

--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
     <title>Il Mio Progetto</title>
 </head>
 <body>
-    <h1>IL MIO Progetto</h1>
+    <header>
+        <nav></nav>
+    </header>
+    <main>
+        <section>
+
+        </section>
+    </main>
+    <footer>
+        
+    </footer>
 </body>
 </html>
