--- a/article card.html
+++ b/article card.html
@@ -18,6 +18,7 @@
                 <img src="https://www.kindpng.com/picc/m/394-3947019_round-profile-picture-png-transparent-png.png" alt="foto profilo di utente">
                 <h5>July Dec</h5>
                 <span>3h ago</span>
+                <a href="https://codingtorque.com/article-cards-using-html-css/">clicca qui per vedere la reference!</a>
             </footer>
         </div>
     </main>
