creato primo progetto css

--- a/card/article card.html
+++ b/card/article card.html
@@ -27,6 +27,11 @@
             <li>Pasta</li>
             <li>Frutta</li>
         </ul>
+        <ol>
+            <li>Daniela</li>
+            <li>Paola</li>
+            <li>Lucia</li>
+        </ol>
     </main>
 
 </body>
